--- a/EnquiryApp/src/main/resources/application.properties
+++ b/EnquiryApp/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.url=jdbc:mysql://localhost:3306/enquiry_poc_db
 spring.datasource.username=root
-spring.datasource.password=Eleei5#n
+spring.datasource.password=** your database password **
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
