--- a/EnquiryApp/src/main/resources/application.properties
+++ b/EnquiryApp/src/main/resources/application.properties
@@ -2,15 +2,17 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.url=jdbc:mysql://localhost:3306/enquiry_poc_db
 spring.datasource.username=root
-spring.datasource.password=Eleei5#n
+spring.datasource.password=** Your DB password **
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
-
-3spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+# To register customized dialect class with Spring Framework
+
+spring.jpa.properties.hibernate.dialect = com.eqap.poc.MyCustomDialect
